tests/valid/StaticVar_Valid_3.whiley
int x = 1
int y = x + 1

method test():
    assert y == 2