tests/invalid/Old_Invalid_5.whiley
method m(int x):
    //
    assert x == old(x)